# cpp-course

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  config.yaml  dir_000006_000004.html  dir_63f00c144875c00ab2f4b2746f79fd56.html  dir_6eb4bea0cabc69a2923fdbac7f20cce4.html  dir_6eb4bea0cabc69a2923fdbac7f20cce4_dep.map  dir_6eb4bea0cabc69a2923fdbac7f20cce4_dep.md5  dir_8629d6689e7f97a19f05662b5493d6bd.html  dir_8629d6689e7f97a19f05662b5493d6bd_dep.map  dir_8629d6689e7f97a19f05662b5493d6bd_dep.md5  dir_b76501ef15a0269da3897b0a9e2688c3.html  dir_b76501ef15a0269da3897b0a9e2688c3_dep.map  dir_b76501ef15a0269da3897b0a9e2688c3_dep.md5  dir_c4a66492add72c01fe9f13d446eef24e.html  dir_cf6251e0363475f07e1b60c9d479e5db.html  dir_cf6251e0363475f07e1b60c9d479e5db_dep.map  dir_cf6251e0363475f07e1b60c9d479e5db_dep.md5  dir_fcab9e44bc7cbbd2fa93cec13a5d8bcd.html  example__lib_8cpp.html  example__lib_8cpp__incl.map  example__lib_8cpp__incl.md5  example__lib_8hpp.html  example__lib_8hpp__dep__incl.map  example__lib_8hpp__dep__incl.md5  example__lib_8hpp__incl.map  example__lib_8hpp__incl.md5  example__lib_8hpp_source.html  files.html  graph_legend.html  hw5.drawio  index.html  mainpage_8md.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespacesorting.html  usefull
.github/workflows/: worklow1.yml  worklow1.yml_bkp  worklow1.yml_bkp2  worklow1.yml_clean  worklow1.yml_clear
_deb/: HOMEWORK-1-1.0.0-Linux.deb  HOMEWORK-1-1.0.10-Linux.deb  HOMEWORK_1-1.0.10-Linux.deb
_deb/_CPack_Packages/Linux/DEB/: HOMEWORK-1-1.0.0-Linux.deb
_deb/_CPack_Packages/Linux/DEB/HOMEWORK-1-1.0.0-Linux/ALL_COMPONENTS_IN_ONE/: control  md5sums
_misc/test-prj/: CMakeLists.txt
_misc/test-prj-mod/core/app/: CMakeLists.txt
_misc/test-prj-mod/core/exampleLib/include/exampleZ/: example_lib.hpp
_misc/test-prj-mod/core/module1/: CMakeLists.txt  asdaCMakeLists.txt22
_misc/test-prj-mod/tests/src/: main.cpp
_misc/test-prj/core/app/: CMakeLists.txt
_misc/test-prj/core/app/doxy_setup/: Doxyfile
_misc/test-prj/core/app/include/: lib1.hpp
_misc/test-prj/core/app/src/: main.cpp
_misc/test-prj/core/exampleLib/include/exampleZ/: example_lib.hpp
_misc/test-prj/tests/src/: test1.cpp
homework-1/: CMakeLists.txt  CMakePresets.json  readme
homework-1/cmake.include/: cpack.cmake  executable.cmake
homework-1/core/: CMakeLists.txt
homework-1/core/app/: CMakeLists.txt
homework-1/core/app/src/: main.cpp
homework-1/core/exampleLib/: CMakeLists.txt
homework-1/core/exampleLib/include/exampleZ/: example_lib.hpp
homework-1/core/exampleLib/src/: compile_flags.txt  example_lib.cpp
homework-1/tests/: CMakeLists.txt
homework-1/tests/src/: main.cpp  test1.cpp
homework-2/: CMakeLists.txt
homework-2/cmake.include/: colors.cmake  cpack.cmake  funcs.cmake
homework-2/core/app/: CMakeLists.txt
homework-2/core/app/src/: main.cpp
homework-2/core/exampleLib/include/exampleLib/: example_lib.hpp
homework-2/core/exampleLib/src/: example_lib.cpp
homework-2/tests/: CMakeLists.txt
homework-2/tests/include/: test1.hpp
homework-2/tests/src/: main.cpp
homework-3/: CMakeLists.txt
homework-3/cmake.include/: cpack.cmake  executable.cmake  sharedlib.cmake
homework-3/core/: CMakeLists.txt
homework-3/core/app/: CMakeLists.txt
homework-3/core/app/include/: allocator.hpp  custom_vector.hpp
homework-3/core/app/src/: lib1.cpp  main.cpp
homework-3/core/exampleLib/doxy_setup/: Doxyfile  mainpage.md
homework-3/core/exampleLib/include/exampleLib/: example_lib.hpp
homework-3/core/exampleLib/include/mallocz/: mallocz.h
homework-3/core/exampleLib/src/: compile_flags.txt  example_lib.cpp  mallocz.c
homework-3/tests/src/: compile_flags.txt  main.cpp
homework-4/: CMakeLists.txt
homework-4/cmake.include/: cpack.cmake  executable.cmake  sharedlib.cmake
homework-4/core/app/: CMakeLists.txt
homework-4/core/app/src/: lib1.cpp  main.cpp
homework-4/core/exampleLib/: CMakeLists.txt
homework-4/core/exampleLib/doxy_setup/: Doxyfile  mainpage.md
homework-4/core/exampleLib/include/exampleLib/: example_lib.hpp
homework-4/core/exampleLib/src/: example_lib.cpp
homework-5/: .gitignore  CMakeLists.txt
homework-5/cmake.include/: compile_features.cmake  platforms.cmake  sharedlib.cmake
homework-5/core/app/doxy_setup/: Doxyfile  mainpage.md
homework-5/core/app/include/: allocator.hpp  buffer.hpp  controller.hpp  model.cpp  model.hpp  shapes.hpp  view.hpp
homework-5/core/app/src/: main.cpp
homework-6/: CMakeLists.txt  Doxyfile
homework-6/core/app/: CMakeLists.txt  version.h.in
homework-6/core/app/include/: lib1.hpp
homework-6/core/app/src/: lib1.cpp  main.cpp
homework-6/tests/: CMakeLists.txt
homework-6/tests/src/: main.cpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  files_0.js  functions_0.js  namespaces_0.js  pages_0.js  searchdata.js
test-prj/: CMakeLists.txt  CMakePresets.json  version.h.in
test-prj-2/: .gitignore  CMakePresets.json
test-prj-2/core/app/: CMakeLists.txt  version.h.in
test-prj-2/core/app/src/: main.cpp
test-prj-mod/: CMakeLists.txt
test-prj-mod/cmake.include/: funcs.cmake
test-prj-mod/core/: CMakeLists.txt
test-prj-mod/core/app/: CMakeLists.txt
test-prj-mod/core/app/modules/: mod.ixx
test-prj-mod/core/app/src/: compile_flags.txt  main.cpp
test-prj-mod/core/exampleLib/include/exampleZ/: another.hpp
test-prj-mod/core/module1/: ccCMakeLists.txt22
test-prj-mod/core/module1/src/: foo.cppm  hello.cpp
test-prj-mod/tests/: CMakeLists.txt
test-prj-mod/tests/include/: test1.hpp
test-prj/cmake.include/: compile_features.cmake  cpack.cmake
test-prj/core/: CMakeLists.txt
test-prj/core/app/: CMakeLists.txt
test-prj/core/app/src/: lib1.cpp  main.cpp
test-prj/core/exampleLib/: CMakeLists.txt  version.h.in
test-prj/core/exampleLib/src/: another.cpp  example_lib.cpp
test-prj/tests/: CMakeLists.txt
test-prj/tests/src/: main.cpp
timus/: main.cpp
